# moodle-cms-notifs

./: .gitignore  Cargo.toml  README.md  readme.md
binaries/: cms_notifs_linux
src/: api.rs  error.rs  gui.rs  html.rs  lib.rs  main.rs
