[package]
name = "cms_notifs"
version = "0.1.1"
authors = ["Divyanshu Agrawal <agrawal.divyanshu@outlook.com>"]
edition = "2018"
description = "Read your latest unread notifications from the Moodle CMS"
homepage = "https://github.com/agrawal-d/moodle-cms-notifs/"
repository = "https://github.com/agrawal-d/moodle-cms-notifs/"
license = "GPL-3.0-or-later"
keywords = ["moodle", "cms", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.7"}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
home = "0.5.3"
reqwest = { version = "0.11.3", features = ["blocking"] }
webbrowser = "0.5.5"
simplelog = "0.10.0"
log = "0.4.14"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'  # Optimize for size.